syntax = "proto3";

package temporal.server.api.persistence.v1;
option go_package = "go.temporal.io/server/api/persistence/v1;persistence";

// data column
message QueueMetadata {
    map<string, int64> cluster_ack_levels = 1;
}
